@@ -1,3 +1,7 @@
+Sun Mar  9 02:31:15 UTC 2008 / Charles Lepple <clepple@gmail.com>
+
+ - drivers/bestups.[ch]: Don't show ups.temperature if it starts with an 'X'.
+
 Sat Mar  8 20:52:51 UTC 2008 / Arjen de Korte <arjen@de-korte.org>
 
  - drivers/powerpanel: update man page and OP series conversion
